Source/WebKit2/NetworkProcess/cache/NetworkCacheKey.h
@@ -44,7 +44,7 @@ public:
     Key() { }
     Key(const Key&);
     Key(Key&&) = default;
-    Key(const String& method, const String& partition, const String& identifier);
+    Key(const String& method, const String& partition, const String& range, const String& identifier);
 
     Key& operator=(const Key&);
     Key& operator=(Key&&) = default;
@@ -74,6 +74,7 @@ private:
     String m_method;
     String m_partition;
     String m_identifier;
+    String m_range;
     HashType m_hash;
 };
 
